[package]
name = "websocket_toolkit"
version = "0.2.0"
authors = ["Sai Sumanth", "Leela Venkat Sai", "Kushal Kumar"]
edition = "2021"
description = "A WebSocket toolkit for Rust, enabling efficient real-time communication with flexible reconnection and message handling capabilities."
license = "MIT"
repository = "https://github.com/SUMANTH571/Websocket-Toolkit"
homepage = "https://github.com/SUMANTH571/Websocket-Toolkit"
documentation = "https://docs.rs/websocket_toolkit"
readme = "README.md"

keywords = ["WebSocket", "Rust", "Real-time", "Networking", "Async"]
categories = ["network-programming", "asynchronous", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.15", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_cbor = { version = "0.11", optional = true }
log = "0.4"
env_logger = "0.9"

[features]
default = ["tokio", "tokio-tungstenite", "serde", "serde_json", "serde_cbor"]

[badges]
travis-ci = { repository = "SUMANTH571/Websocket-Toolkit" }
